<resources>
    <string name="app_name">TaskManagerApp</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_file">Select file</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="keywords">Keywords</string>
    <string name="selected_file">Selected file:</string>
    <string name="pending_tasks">Pending</string>
    <string name="finished_tasks">Finished</string>
    <string name="task_stored">Task created</string>
    <string name="task_updated">Task updated</string>
    <string name="file">File:</string>
    <string name="upload_completed">Upload completed</string>
    <string name="upload_canceled">Upload canceled</string>
    <string name="uploading">Uploading: </string>
    <string name="already_scheduled">Task is already scheduled</string>
    <string name="already_ongoing">Task is already in progress</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="create_task_failed">Create task failed</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="cannot_edit_scheduled">Cannot edit scheduled task</string>
    <string name="cannot_edit_ongoing">Cannot edit ongoing task</string>
    <string name="no_file_selected">No file selected</string>
    <string name="no_name_specified">No name specified</string>
    <string name="add_keywords">Add keywords</string>
    <string name="execution_time">Execution time:</string>
    <string name="new_task">New Task</string>

    <string name="cancel_task_action" translatable="false">cancel_task</string>
    <string name="create_task_action" translatable="false">create_task</string>

    <string-array name="tab_titles">
        <item>@string/pending_tasks</item>
        <item>@string/finished_tasks</item>
    </string-array>
</resources>
